[B]1.1.1[/B]
- Rebased to utilize tulip libraries

[B]1.1.0[/B]
- Tweaked sections
- Added new add-on screenshots

[B]1.0.2[/B]
- Re-work of addon (new API)
- Re-work of artwork (new indent)

[B]1.0.1[/B]
- Code cosmetics

[B]1.0.0[/B]
- Initial version