@@ -1,4 +1,3 @@
-======================
 ANT1 Player addon for Kodi
 ======================
 
