@@ -1,3 +1,10 @@
+[B]1.1.3[/B]
+- Cosmetics
+- Tweaks in addon.xml
+
+[B]1.1.2[/B]
+- Cosmetics
+
 [B]1.1.1[/B]
 - Rebased to utilize tulip libraries
 
